# capataz-monitor

./: Cargo.toml  Makefile  docker-compose.yaml  shell.nix
config/prometheus/: prometheus.yml
etc/grafana/provisioning/datasources/: datasource.yml
etc/prometheus/: prometheus.yml
proto/: events.proto  hello.proto
sidecar/: Cargo.toml  Makefile  shell.nix
sidecar/proto/: events.proto  hello.proto
sidecar/src/: events.rs  hello.rs  lib.rs  metrics.rs
src/: hello.rs  main.rs  store.rs
