[package]
name = "capataz-monitor"
version = "0.1.0"
authors = ["roman"]
edition = "2018"

[lib]
name = "sidecar"
path = "src/lib.rs"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
protobuf =  "2.8.0"
hyper = "0.12.33"
hyper-router = "0.5.0"
lazy_static = "1.3.0"
futures = "0.1.28"
tokio = "0.1.22"
prometheus = "0.7"